Replace MessageStatusService with ConversationService to support the workflow design based on the pull mode #289